:last-update-label!:

= History

== 10.2.9
* Added documentation regarding stream reuse restrictions for TLS-related streams. #447

== 10.2.8
* Added Share Name character check. #445

== 10.2.7
* Implemented cmake package version checking. #124, #444,
* Fixed broker tool not delivering all retained messages when wildcard subscription matches multiple topics. #442, #443

== 10.2.6
* Removed unintentional copy requiment from some of async functions parameter. #439, #440
* Fixed Heap-use-after-free during broker shutdown. #437
* Rifined documents. #435
* Added TLS Websocket verify none port to broker for browser. #434
* Added Cerfiticate file's digitalSignature to keyUsage. #432
* Fixed wss connection from Web Browser handshake failed problem. #431
* Changed trial broker on `async-mqtt.redboltz.net` ws and wss port. #430
  * ws was 10080 but Chrome block it by default. Updated to 80.
  * wss was 10443 but Chrome doesn't block it by default. But for consistency, updated to 443.
  * system_test still uses 10080 and 10443 to avoid conflict.

== 10.2.5
* Fixed missing server_keep_alive timer operation for CONNACK packet sending. #429

== 10.2.4
* Fixed invalid sendable packet checking whne ASYNC_MQTT_SEPARATE_COMPILATION is defined. #428

== 10.2.3
* Added missing pingresp timer cancel request hanndling on asio_bind sending. #426

== 10.2.2
* Fixed pingresp timer management. #423

== 10.2.1
* Fixed receive_maximum invalid handling issue. #422

== 10.2.0
* Fixed offline publish/pubrel packet_id management. #419
* Added packet_id limit functionality for testing. #418
* Recovered missing compile-time Role-Packet checking functionality. #417
* Added broker's Client Certificate subjectAltName. #416
* Fixed invalid remaining length parsing problem on disconnect and auth packet. #415
* Supported Boost.1.88.0 defaulted process v2. #414
* Fixed PacketIdBytes treatment in MQTT v5 publish response packets. #412
* Refined documents. #410
* Refined CI. #409